src/testFunctional/testData/org/intellij/xquery/annotator/function/Unresolved.xq
<error descr="Cannot resolve function 'fun'">fun</error>(),fn:doc('abc.xml'), <error descr="Cannot resolve function 'local:fun'">local:fun</error>#1